fix: "생성 시간" overflow 수정

--- a/src/component/video-table.module.css
+++ b/src/component/video-table.module.css
@@ -12,7 +12,7 @@
     }
     th:nth-child(4), td:nth-child(4) {
         white-space: nowrap;
-        width: 18%;
+        width: 17%;
         overflow: hidden;
     }
     th:nth-child(5), td:nth-child(5) {
